--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,6 +72,7 @@ padding-left: 15px;
 text-align: center;
 background-image: asset-url('meeting.jpg');
 background-size: cover;
+height:200px;
 color: #fff;
 font-family: 'Helvetica Neue' !important;
 font-stretch: expanded;
